# pkg-svpaseg

./: .gitmodules  CMakeLists.txt  svpaseg-pve-tweaked.txt
scripts/: builddeb.sh  compile.sh
scripts/docker_build_environment/: Dockerfile
